# med-lm-eval

./: .gitignore  pyproject.toml
environments/medbullets/: README.md  medbullets.py  pyproject.toml
environments/medqa/: README.md  medqa.py  pyproject.toml
environments/medredqa/: README.md  medredqa.py  pyproject.toml
environments/pubmedqa/: .gitignore  pubmedqa.py  pyproject.toml  readme.md  test_pubmedqa.py
